@@ -1,5 +1,10 @@
 2016-05-06  Richard Biener  <rguenther@suse.de>
 
+	PR middle-end/70931
+	* gfortran.dg/pr70931.f90: New testcase.
+
+2016-05-06  Richard Biener  <rguenther@suse.de>
+
 	PR middle-end/70941
 	* gcc.dg/torture/pr70941.c: New testcase.
 
