@@ -1,5 +1,10 @@
 2016-05-06  Richard Biener  <rguenther@suse.de>
 
+	PR middle-end/70931
+	* dwarf2out.c (native_encode_initializer): Skip zero-sized fields.
+
+2016-05-06  Richard Biener  <rguenther@suse.de>
+
 	PR middle-end/70941
 	* fold-const.c (split_tree): Always convert to the original type
 	before negating.
